--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,11 @@
   },
   "extends": "airbnb",
   "rules": {
-      //"jsx-a11y/no-static-element-interactions": 0,
-      "linebreak-style": ["error", "windows"],
+      "jsx-a11y/no-static-element-interactions": 0,
+      //"linebreak-style": "off",
       "comma-dangle": ["error", "ignore"],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "import/no-extraneous-dependencies": [error, { devDependencies: true }]
-      //"react/prop-types": 0
+      "import/no-extraneous-dependencies": [error, { devDependencies: true }],
+      "react/prop-types": 0
   }
 }
