--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marmotte-deli",
-  "version": "0.1",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "lint": "eslint src/**/*.js webpack.config.js",
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "milligram": "^1.2.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
-    "redux": "^3.6.0"
+    "react-router": "^3.0.1",
+    "react-toolbox": "^1.3.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
