--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-test-renderer": "^15.4.1",
     "style-loader": "0.13.1",
     "webpack": "2.1.0-beta.25",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-config-utils": "^2.3.0",
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "1.16.2",
