--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "jest-cli": "^18.1.0",
     "jsdom": "^9.9.1",
     "json-loader": "0.5.4",
+    "node-sass": "^4.3.0",
     "react-addons-test-utils": "^15.4.1",
     "react-test-renderer": "^15.4.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "0.13.1",
     "webpack": "2.1.0-beta.25",
     "webpack-bundle-analyzer": "^2.2.1",
