--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   "extends": "airbnb",
   "rules": {
       "jsx-a11y/no-static-element-interactions": 0,
-      //"linebreak-style": "off",
+      "linebreak-style": "off",
       "comma-dangle": ["error", "ignore"],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "import/no-extraneous-dependencies": [error, { devDependencies: true }],
