--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.1",
+    "react-router": "^4.0.0-alpha.6",
     "react-toolbox": "^1.3.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
@@ -53,7 +53,7 @@
     "react-test-renderer": "^15.4.1",
     "sass-loader": "^4.1.1",
     "style-loader": "0.13.1",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "^2.2.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-config-utils": "^2.3.0",
     "webpack-dashboard": "^0.2.1",
