--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
     "jsdom": "^9.9.1",
