--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cover": "npm run test -- --coverage"
   },
   "dependencies": {
+    "firebase": "^3.6.6",
     "lodash": "^4.17.4",
     "milligram": "^1.2.4",
     "react": "^15.4.1",
