--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marmot",
+  "name": "meny",
   "version": "0.0.1",
   "description": "",
   "scripts": {
@@ -20,7 +20,6 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^4.0.0-alpha.6",
-    "react-toolbox": "^1.3.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4"
