--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
       "comma-dangle": ["error", "ignore"],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "import/no-extraneous-dependencies": [error, { devDependencies: true }],
+      "no-underscore-dangle": "off",
       "react/prop-types": 0
   }
 }
