--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsdom": "^9.9.1",
     "json-loader": "0.5.4",
     "node-sass": "^4.3.0",
+    "offline-plugin": "^4.6.1",
     "react-addons-test-utils": "^15.4.1",
     "react-test-renderer": "^15.4.1",
     "sass-loader": "^4.1.1",
