Small tweaks to package.json / webpack.config.js

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "deploy": "./private/deploy"
   },
   "dependencies": {
-    "axios": "^0.15.3",
     "firebase": "^3.6.6",
     "lodash": "^4.17.4",
     "milligram": "^1.2.4",
@@ -49,6 +48,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
     "jsdom": "^9.9.1",
