--- a/package.json
+++ b/package.json
@@ -15,57 +15,54 @@
     "deploy": "./private/deploy"
   },
   "dependencies": {
-    "firebase": "^3.6.6",
+    "firebase": "^3.7.0",
     "lodash": "^4.17.4",
     "milligram": "^1.2.4",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
-    "react-router": "^4.0.0-alpha.6",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-es2017": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-register": "^6.18.0",
-    "css-loader": "^0.26.1",
+    "babel-core": "^6.23.1",
+    "babel-jest": "^19.0.0",
+    "babel-loader": "^6.4.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.23.0",
+    "css-loader": "^0.26.2",
     "enzyme": "^2.7.0",
-    "enzyme-to-json": "^1.3.0",
-    "eslint": "^3.12.2",
+    "enzyme-to-json": "^1.5.0",
+    "eslint": "^3.17.1",
     "eslint-config-airbnb": "^13.0.0",
-    "eslint-loader": "^1.6.1",
+    "eslint-loader": "^1.6.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.8.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^18.1.0",
-    "jest-cli": "^18.1.0",
-    "jsdom": "^9.9.1",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
+    "jsdom": "^9.11.0",
     "json-loader": "0.5.4",
-    "node-sass": "^4.3.0",
     "offline-plugin": "^4.6.1",
     "react-addons-test-utils": "^15.4.1",
     "react-test-renderer": "^15.4.1",
     "redux-mock-store": "^1.2.2",
-    "sass-loader": "^4.1.1",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.2",
     "surge": "^0.18.0",
-    "webpack": "^2.2.0",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.3.0",
     "webpack-config-utils": "^2.3.0",
-    "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "1.16.2",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-server": "^2.4.1",
     "webpack-validator": "^2.3.0"
   },
   "author": "Sylvain",
