--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.3",
-    "react-router": "^4.0.0-beta.7",
+    "react-router-dom": "^4.0.0-beta.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4"
