--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "react",
     ["es2015", {"modules": false, "loose": true}]
   ],
+  "plugins": ["transform-object-rest-spread"],
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
