--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint src/**/*.js webpack.config.js",
     "fix-lint": "eslint --fix src/**/*.js webpack.config.js",
-    "build": "webpack -p --env.prod",
+    "build": "cross-env NODE_ENV=production webpack -p --env.prod",
     "watch": "npm run build -- --watch",
     "dev": "webpack-dev-server --env.dev",
     "test": "jest",
@@ -32,10 +32,12 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.23.0",
+    "cross-env": "^3.2.3",
     "css-loader": "^0.26.2",
     "enzyme": "^2.7.0",
     "enzyme-to-json": "^1.5.0",
