--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,16 @@
 {
   "presets": [
     "react",
-    ["es2015", {"modules": false, "loose": true}]
+    ["env", {
+      "modules": false,
+      "loose": true,
+      "useBuiltIns": true
+    }]
   ],
   "plugins": ["transform-object-rest-spread"],
   "env": {
     "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    },
-    "server": {
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "plugins": ["transform-es2015-modules-commonjs", "transform-runtime"]
     }
   }
 }
