--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "./private/deploy"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "firebase": "^3.7.0",
     "lodash": "^4.17.4",
     "milligram": "^1.2.4",
@@ -29,15 +30,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.23.0",
     "cross-env": "^3.2.3",
     "css-loader": "^0.26.2",
     "enzyme": "^2.7.0",
