--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lodash": "^4.17.4",
     "milligram": "^1.2.4",
     "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
+    "react-motion": "^0.4.7",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
@@ -58,7 +58,6 @@
     "react-test-renderer": "^15.4.1",
     "redux-mock-store": "^1.2.2",
     "style-loader": "^0.13.2",
-    "surge": "^0.18.0",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
     "webpack-config-utils": "^2.3.0",
