--- a/package.json
+++ b/package.json
@@ -16,58 +16,63 @@
     "deploy": "./private/deploy"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "dotenv-webpack": "^1.5.7",
-    "firebase": "^3.7.0",
-    "lodash": "^4.17.4",
+    "firebase": "^5.3.0",
+    "lodash": "^4.17.10",
     "milligram": "^1.2.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-modal": "^1.7.7",
-    "react-motion": "^0.4.7",
-    "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-modal": "^3.5.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-react": "^6.23.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.2.3",
-    "css-loader": "^0.26.2",
-    "enzyme": "^2.7.0",
-    "enzyme-to-json": "^1.5.0",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-loader": "^1.6.3",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "jsdom": "^9.11.0",
-    "json-loader": "0.5.4",
-    "offline-plugin": "^4.6.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-test-renderer": "^15.4.1",
-    "redux-mock-store": "^1.2.2",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.3.0",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
+    "@babel/polyfill": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "autoprefixer": "^9.0.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^8.0.0-beta.4",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "dotenv-webpack": "^1.5.7",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.4",
+    "eslint": "^4.1.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-security": "^1.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.4.1",
+    "jest-cli": "^23.4.1",
+    "jsdom": "^11.11.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "offline-plugin": "^5.0.5",
+    "postcss-loader": "^2.1.6",
+    "prettier": "^1.13.7",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0",
     "webpack-config-utils": "^2.3.0",
-    "webpack-dashboard": "^0.3.0",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-validator": "^2.3.0"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-validator": "^3.0.1"
   },
   "author": "Sylvain",
   "license": "MIT"
