Migrate to vite

--- a/package.json
+++ b/package.json
@@ -1,79 +1,36 @@
 {
   "name": "meny",
-  "version": "0.0.1",
-  "description": "",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "lint": "eslint src/**/*.js webpack.config.js",
-    "fix-lint": "eslint --fix src/**/*.js webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack -p --env.prod",
-    "build-remote": "node ./scripts/setupEnv.js && cross-env NODE_ENV=production webpack -p --env.prod",
-    "watch": "npm run build -- --watch",
-    "dev": "webpack-dev-server --env.dev",
-    "test": "jest",
-    "update-test": "jest -u",
-    "cover": "npm run test -- --coverage",
-    "predeploy": "npm run build",
-    "deploy": "./private/deploy"
+    "dev": "vite",
+    "build-remote": "node ./scripts/setupEnv.js && npm run build",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^5.3.0",
-    "lodash": "^4.17.10",
-    "milligram": "^1.2.4",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-modal": "^3.5.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1"
+    "@reduxjs/toolkit": "^2.8.2",
+    "firebase": "^11.9.1",
+    "lodash.throttle": "^4.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
-    "@babel/polyfill": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "autoprefixer": "^9.0.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^8.0.0-beta.4",
-    "copy-webpack-plugin": "^4.5.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "dotenv-webpack": "^1.5.7",
-    "enzyme": "^3.3.0",
-    "enzyme-to-json": "^3.3.4",
-    "eslint": "^4.1.1",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-security": "^1.3.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.4.1",
-    "jest-cli": "^23.4.1",
-    "jsdom": "^11.11.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
-    "offline-plugin": "^5.0.5",
-    "postcss-loader": "^2.1.6",
-    "prettier": "^1.13.7",
-    "react-test-renderer": "^16.4.1",
-    "redux-mock-store": "^1.5.3",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.1",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-config-utils": "^2.3.0",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-validator": "^3.0.1"
-  },
-  "author": "Sylvain",
-  "license": "MIT"
+    "@eslint/js": "^9.28.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.2.0",
+    "sass": "^1.89.2",
+    "vite": "^6.3.5"
+  }
 }
